--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #dfa76f;    
+    background: #dbd2c8;    
     min-height: 100vh;
 }
 
@@ -20,6 +20,23 @@ ul{
     margin-left: 5%;
     margin-right: 5%;
     /* text-align: center; */
+}
+
+.Button{
+    float: right;
+    padding: 1% 2%;
+    font-size: 20px;
+    background-color: rgb(44, 112, 168);
+    border-radius: 10px;
+    outline: 0;
+    /* border-color: lightblue; */
+    /* border: 0px; */
+    /* box-shadow: 0px 2px 2px lightblue; */
+    cursor: pointer;
+}
+
+h1{
+    text-align: center;
 }
 
 
