--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ ul{
     float: right;
     padding: 1% 2%;
     font-size: 20px;
-    background-color: rgb(44, 112, 168);
+    background-color: #dbd2c8;;
     border-radius: 10px;
     outline: 0;
     /* border-color: lightblue; */
