--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 body {
     background: #dbd2c8;    
     min-height: 100vh;
+    font-family: "Open Sans", sans-serif;
 }
 
 img {
