updating background color

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 body {
-    background: #dbd2c8;    
+    background: #d4d4d3;    
     min-height: 100vh;
     font-family: 'Playfair Display', serif;}
 
