updating button color

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ ul{
     float: right;
     padding: 1% 2%;
     font-size: 20px;
-    background-color: #dbd2c8;;
+    background: #d4d4d3;    
     border-radius: 10px;
     outline: 0;
     /* border-color: lightblue; */
