--- a/style.css
+++ b/style.css
@@ -22,29 +22,27 @@ ul{
 .meal{
     margin-left: 7%;
     margin-right: 7%;
-    /* text-align: center; */
+    display: grid;
+}
+
+.ButtonDiv{
+    text-align: center;
 }
 
 .Button{
-    /* float: right; */
-    position: relative;
-    bottom: 2%;
-    margin-top: 4%;
-    text-align: center;
+    margin-top: 3%;
+    margin-bottom: 2%;
     padding: 0.5% 2%;
     font-size: 20px;
     background: #d4d4d3;    
     border-radius: 10px;
     outline: 0;
-    /* border-color: lightblue; */
-    /* border: 0px; */
-    /* box-shadow: 0px 2px 2px lightblue; */
     cursor: pointer;
 }
 
 h1{
     text-align: center;
-    padding-bottom: 2%;
+    padding-bottom: 1.5%;
 }
 
 p{
