--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
 
 body {
-    background: #d4d4d3;    
+    color: white;
+    background: #1f1d1d;    
     min-height: 100vh;
     font-family: 'Playfair Display', serif;}
 
@@ -34,7 +34,8 @@ ul{
     margin-bottom: 2%;
     padding: 0.5% 2%;
     font-size: 20px;
-    background: #d4d4d3;    
+    background: #d4d4d3;
+    
     border-radius: 10px;
     outline: 0;
     cursor: pointer;
