--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
     color: white;
     background: #1f1d1d;    
     min-height: 100vh;
-    font-family: 'Playfair Display', serif;}
+    font-family: 'Playfair Display', serif;
+}
 
 img {
     max-width: 45%;
@@ -30,6 +31,7 @@ ul{
 }
 
 .Button{
+    font-family: 'Playfair Display', serif;
     margin-top: 3%;
     margin-bottom: 2%;
     padding: 0.5% 2%;
